--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,19 @@
 [tool.poetry]
-name = "bank widget"
+name = "Job-1"
 version = "0.1.0"
 description = ""
 authors = ["Maksim Pestov <moikry@mail.ru>"]
 readme = "README.md"
+packages = [
+    {include = "src"},
+]
 
 [tool.poetry.dependencies]
 python = "^3.13"
 pandas = "^2.2.3"
-
+openpyxl = "^3.0.9"
+python-dotenv = "^0.19.1"
+requests = "^2.26.0"
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.1"
@@ -19,7 +24,6 @@ mypy = "^1.13.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
 
 [tool.black]
 # Максимальная длина строки
@@ -40,7 +44,6 @@ exclude = '''
                      # в корне проекта
 )
 '''
-
 
 [tool.isort]
 # максимальная длина строки
