--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ packages = [
 python = "^3.13"
 pandas = "^2.2.3"
 openpyxl = "^3.0.9"
-python-dotenv = "^0.19.1"
+python-dotenv = "^1.0.1"
 requests = "^2.26.0"
+pytest = "^8.3.4"
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.1"
